--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -3,5 +3,6 @@
         <file alias="main.qml">contents/ui/main.qml</file>
         <file alias="EntryListPage.qml">contents/ui/EntryListPage.qml</file>
         <file alias="FeedListPage.qml">contents/ui/FeedListPage.qml</file>
+        <file alias="EntryPage.qml">contents/ui/EntryPage.qml</file>
     </qresource>
 </RCC>
