Set material colors to blue
Reviewed by: tfella

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -6,5 +6,6 @@
         <file alias="EntryPage.qml">qml/EntryPage.qml</file>
         <file alias="SettingsPage.qml">qml/SettingsPage.qml</file>
         <file alias="FeedDetailsPage.qml">qml/FeedDetailsPage.qml</file>
+        <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
