--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -10,6 +10,7 @@
         <file alias="EntryListDelegate.qml">qml/EntryListDelegate.qml</file>
         <file alias="AddFeedSheet.qml">qml/AddFeedSheet.qml</file>
         <file alias="FeedListDelegate.qml">qml/FeedListDelegate.qml</file>
+        <file alias="FeedImage.qml">qml/FeedImage.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
