--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -6,10 +6,10 @@
         <file alias="EntryPage.qml">qml/EntryPage.qml</file>
         <file alias="SettingsPage.qml">qml/SettingsPage.qml</file>
         <file alias="FeedDetailsPage.qml">qml/FeedDetailsPage.qml</file>
-        <file alias="EntryListHeader.qml">qml/EntryListHeader.qml</file>
         <file alias="EntryListDelegate.qml">qml/EntryListDelegate.qml</file>
         <file alias="AddFeedSheet.qml">qml/AddFeedSheet.qml</file>
         <file alias="FeedListDelegate.qml">qml/FeedListDelegate.qml</file>
+        <file alias="PodcastPlayerPage.qml">qml/PodcastPlayerPage.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
