--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -10,6 +10,7 @@
         <file alias="AddFeedSheet.qml">qml/AddFeedSheet.qml</file>
         <file alias="FeedListDelegate.qml">qml/FeedListDelegate.qml</file>
         <file alias="PodcastPlayerPage.qml">qml/PodcastPlayerPage.qml</file>
+        <file alias="MinimizedPlayerControls.qml">qml/MinimizedPlayerControls.qml</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
