--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,3 +1,5 @@
+<!-- SPDX-FileCopyrightText: 2020 Tobias Fella <fella@posteo.de> -->
+<!-- SPDX-License-Identifier: CC0-1.0 -->
 <RCC>
     <qresource prefix="/">
         <file alias="main.qml">qml/main.qml</file>
