--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -14,6 +14,7 @@
         <file alias="FooterBar.qml">qml/FooterBar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
         <file alias="QueueDelegate.qml">qml/QueueDelegate.qml</file>
+        <file alias="logo.png">../logo.png</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
 </RCC>
