Refactor to re-usable header for list and details pages

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -15,6 +15,7 @@
         <file alias="FooterBar.qml">qml/FooterBar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
         <file alias="QueueDelegate.qml">qml/QueueDelegate.qml</file>
+        <file alias="GenericListHeader.qml">qml/GenericListHeader.qml</file>
         <file alias="logo.png">../logo.png</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
