Refactor Queue and EntryList to use a GenericEntryDelegate
Still to be done is putting the actions into the GenericEntryDelegate
itself.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -7,15 +7,14 @@
         <file alias="SettingsPage.qml">qml/SettingsPage.qml</file>
         <file alias="AboutPage.qml">qml/AboutPage.qml</file>
         <file alias="FeedDetailsPage.qml">qml/FeedDetailsPage.qml</file>
-        <file alias="EntryListDelegate.qml">qml/EntryListDelegate.qml</file>
         <file alias="AddFeedSheet.qml">qml/AddFeedSheet.qml</file>
         <file alias="FeedListDelegate.qml">qml/FeedListDelegate.qml</file>
         <file alias="MinimizedPlayerControls.qml">qml/MinimizedPlayerControls.qml</file>
         <file alias="PlayerControls.qml">qml/PlayerControls.qml</file>
         <file alias="FooterBar.qml">qml/FooterBar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
-        <file alias="QueueDelegate.qml">qml/QueueDelegate.qml</file>
         <file alias="GenericListHeader.qml">qml/GenericListHeader.qml</file>
+        <file alias="GenericEntryDelegate.qml">qml/GenericEntryDelegate.qml</file>
         <file alias="logo.png">../logo.png</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
