--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -13,6 +13,7 @@
         <file alias="PlayerControls.qml">qml/PlayerControls.qml</file>
         <file alias="FooterBar.qml">qml/FooterBar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
+        <file alias="EpisodeListPage.qml">qml/EpisodeListPage.qml</file>
         <file alias="GenericListHeader.qml">qml/GenericListHeader.qml</file>
         <file alias="GenericEntryDelegate.qml">qml/GenericEntryDelegate.qml</file>
         <file alias="logo.png">../logo.png</file>
