--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -18,6 +18,7 @@
         <file alias="DownloadSwipePage.qml">qml/DownloadSwipePage.qml</file>
         <file alias="GenericListHeader.qml">qml/GenericListHeader.qml</file>
         <file alias="GenericEntryDelegate.qml">qml/GenericEntryDelegate.qml</file>
+        <file alias="UpdateNotification.qml">qml/UpdateNotification.qml</file>
         <file alias="logo.png">../logo.png</file>
         <file>qtquickcontrols2.conf</file>
     </qresource>
