--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -17,7 +17,7 @@
         <file alias="ErrorListPage.qml">qml/ErrorListPage.qml</file>
         <file alias="EpisodeSwipePage.qml">qml/EpisodeSwipePage.qml</file>
         <file alias="DownloadSwipePage.qml">qml/DownloadSwipePage.qml</file>
-        <file alias="GenericListHeader.qml">qml/GenericListHeader.qml</file>
+        <file alias="GenericHeader.qml">qml/GenericHeader.qml</file>
         <file alias="GenericEntryDelegate.qml">qml/GenericEntryDelegate.qml</file>
         <file alias="UpdateNotification.qml">qml/UpdateNotification.qml</file>
         <file alias="logo.png">../logo.png</file>
