--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -25,5 +25,6 @@
         <file alias="UpdateNotification.qml">qml/UpdateNotification.qml</file>
         <file alias="HeaderBar.qml">qml/HeaderBar.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file alias="logo.svg">../kasts.svg</file>
     </qresource>
 </RCC>
