--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -16,9 +16,9 @@
         <file alias="FooterBar.qml">qml/FooterBar.qml</file>
         <file alias="QueuePage.qml">qml/QueuePage.qml</file>
         <file alias="EpisodeListPage.qml">qml/EpisodeListPage.qml</file>
+        <file alias="DownloadListPage.qml">qml/DownloadListPage.qml</file>
         <file alias="ErrorListOverlay.qml">qml/ErrorListOverlay.qml</file>
         <file alias="EpisodeSwipePage.qml">qml/EpisodeSwipePage.qml</file>
-        <file alias="DownloadSwipePage.qml">qml/DownloadSwipePage.qml</file>
         <file alias="GenericHeader.qml">qml/GenericHeader.qml</file>
         <file alias="GenericEntryDelegate.qml">qml/GenericEntryDelegate.qml</file>
         <file alias="ImageWithFallback.qml">qml/ImageWithFallback.qml</file>
